<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="16dp"
    android:layout_marginHorizontal="32dp"
    tools:context=".CreateAccountActivity">

    <ImageView
        android:id="@+id/sign_up_icon"

        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="32dp"
        android:src="@drawable/login" />
    
    <LinearLayout
        android:id="@+id/sign_up_greeting"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_up_icon"
        android:orientation="vertical">
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello_text_view"
            android:textStyle="bold"
            android:textSize="32sp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lets_get_started_text_view"
            android:textStyle="bold"
            android:textSize="36sp"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sign_up_form_layout"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_up_greeting"
        android:layout_marginVertical="32dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/sign_up_page_email_edit_text"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_id_hint_edit_text"
            android:textSize="20sp"
            android:background="@drawable/rounded_corner"
            android:padding="16dp"
            android:layout_marginTop="12dp"
            />

        <EditText
            android:id="@+id/sign_up_page_password_edit_text"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password_hint_edit_text"
            android:textSize="20sp"
            android:background="@drawable/rounded_corner"
            android:padding="16dp"
            android:layout_marginTop="12dp"
            />

        <EditText
            android:id="@+id/sign_up_page_confirm_password_edit_text"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/confirm_password_edit_text"
            android:textSize="20sp"
            android:background="@drawable/rounded_corner"
            android:padding="16dp"
            android:layout_marginTop="12dp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_up_page_create_account_btn"

            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/create_account_btn_text"
            android:layout_marginTop="12dp"
            android:textSize="16sp"
            />

        <ProgressBar
            android:id="@+id/sign_up_page_progress_bar"

            android:layout_width="24dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_marginTop="12dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_up_form_layout"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_registered_text_view" />

        <TextView
            android:id="@+id/login_text_view_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/login_text_view"/>

    </LinearLayout>

</RelativeLayout>