<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="16dp"
    android:layout_marginHorizontal="32dp"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/login_greeting"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_password_title_text_view"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="32sp"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/reset_pass_form_layout"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_greeting"
        android:layout_marginVertical="32dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/reset_pass_email_edit_text"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_id_hint_edit_text"
            android:textSize="20sp"
            android:background="@drawable/rounded_corner"
            android:padding="16dp"
            android:layout_marginTop="12dp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reset_pass_page_reset_btn"

            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/reset_password_btn_text"
            android:layout_marginTop="12dp"
            android:textSize="16sp"
            />

        <ProgressBar
            android:id="@+id/login_page_progress_bar"

            android:layout_width="24dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_marginTop="12dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reset_pass_form_layout"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/forgot_pass_back_text_view"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_to_text_view" />

        <TextView
            android:id="@+id/forgot_pass_page_login_text_view_btn"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/reset_pass_page_login_redirect"/>

    </LinearLayout>

</RelativeLayout>