<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_primary"
    android:padding="16dp"
    tools:context=".NotesPageActivity">

    <RelativeLayout
        android:id="@+id/title_bar_layout"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/page_title"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notes_title_text_view"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/home_btn"

                android:contentDescription="@string/home_btn_content_description"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:src="@drawable/baseline_home_24"
                app:tint="@color/white"
                android:background="?attr/selectableItemBackgroundBorderless"/>

            <ImageButton
                android:id="@+id/menu_btn"

                android:contentDescription="@string/menu_button_content_desc"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:src="@drawable/baseline_menu_24"
                app:tint="@color/white"
                android:background="?attr/selectableItemBackgroundBorderless"/>

        </LinearLayout>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title_bar_layout"/>



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/new_note_btn"

        android:contentDescription="@string/add_a_new_note_content_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/baseline_add_24"/>

</RelativeLayout>